--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,87 +8,71 @@
 
   {% include head.html %}
 
-  <body>
-
-	  <!-- Header -->
-	  <header id="header">
-		  <div class="inner">
+	<body class="is-preload">
+		<!-- Wrapper -->
+		<div id="wrapper">
+			
+			<!-- Header -->
+			<header id="header">
+				<div class="inner">
 			  
-			  <!-- Logo -->
-			  <a href="{{ site.baseurl }}" class="logo">
-				  <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">{{ site.title }}</span>
-			  </a>
+					<!-- Logo -->
+					<a href="{{ site.baseurl }}" class="logo">
+						<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">{{ site.title }}</span>
+					</a>
 
-			  <!-- Nav -->
-			  <nav>
-				  <ul>
-					  <li><a href="#menu">Menu</a></li>
-				  </ul>
-			  </nav>
-
-		  </div>
-	  </header>
-	  
-	  <!-- Menu -->
-	  <nav id="menu">
-		  <h2>Menu</h2>
-		  <ul>
-			  <li><a href="index.html">Home</a></li>
-			  <li><a href="generic.html">Ipsum veroeros</a></li>
-			  <li><a href="generic.html">Tempus etiam</a></li>
-			  <li><a href="generic.html">Consequat dolor</a></li>
-			  <li><a href="elements.html">Elements</a></li>
-		  </ul>
-	  </nav>
-
-    <main>
-		<div class="inner">
-      	  {{ content }}
-	  	</div>
-    </main>
-	
-	<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<section>
-					<h2>Get in touch</h2>
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field half">
-								<input type="text" name="name" id="name" placeholder="Name" />
-							</div>
-							<div class="field half">
-								<input type="email" name="email" id="email" placeholder="Email" />
-							</div>
-							<div class="field">
-								<textarea name="message" id="message" placeholder="Message"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send" class="primary" /></li>
+					<!-- Nav -->
+					<nav>
+						<ul>
+							<li><a href="#menu">Menu</a></li>
 						</ul>
-					</form>
-				</section>
-				<section>
-					<h2>Follow</h2>
-					<ul class="icons">
-						<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-						<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-						<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-				</section>
-				<ul class="copyright">
-					<li><time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
+					</nav>
 
-	<!-- Scripts -->
+				</div>
+			</header>
+	  
+			<!-- Menu -->
+			<nav id="menu">
+				<h2>Menu</h2>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="generic.html">Ipsum veroeros</a></li>
+					<li><a href="generic.html">Tempus etiam</a></li>
+					<li><a href="generic.html">Consequat dolor</a></li>
+					<li><a href="elements.html">Elements</a></li>
+				</ul>
+			</nav>
+
+			<main>
+				<div class="inner">
+					{{ content }}
+				</div>
+			</main>
+	
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<section>
+						<h2>Follow</h2>
+						<ul class="icons">
+							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+							<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+					</section>
+					<ul class="copyright">
+						<li><time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		</div>
+		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/browser.min.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
