--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,8 @@
 	
 
     <!-- CSS -->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>	
+	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
+	<noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | relative_url }}" /></noscript>	
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
