--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 			  
 					<!-- Logo -->
 					<a href="{{ site.baseurl }}" class="logo">
-						<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">{{ site.title }}</span>
+						<span class="symbol"><img src="{{ "/images/logo.svg" | relative_url }}" alt="" /></span><span class="title">{{ site.title }}</span>
 					</a>
 
 					<!-- Nav -->
@@ -73,11 +73,11 @@
 
 		</div>
 		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+		<script src="{{ "/assets/js/jquery.min.js" | relative_url }}"></script>
+		<script src="{{ "/assets/js/browser.min.js" | relative_url }}"></script>
+		<script src="{{ "/assets/js/breakpoints.min.js" | relative_url }}"></script>
+		<script src="{{ "/assets/js/util.js" | relative_url }}"></script>
+		<script src="{{ "/assets/js/main.js" | relative_url }}"></script>
 	
   </body>
 </html>
