--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,12 @@
 			<nav id="menu">
 				<h2>Menu</h2>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Ipsum veroeros</a></li>
-					<li><a href="generic.html">Tempus etiam</a></li>
-					<li><a href="generic.html">Consequat dolor</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="{{ "/" | relative_url }}">Home</a></li>
+					<li><a href="{{ "/about/" | relative_url }}">About</a></li>
+					<li><a href="{{ "/generic.html" | relative_url }}">Ipsum veroeros</a></li>
+					<li><a href="{{ "/generic.html" | relative_url }}">Tempus etiam</a></li>
+					<li><a href="{{ "/generic.html" | relative_url }}">Consequat dolor</a></li>
+					<li><a href="{{ "/generic.html" | relative_url }}">Elements</a></li>
 				</ul>
 			</nav>
 
