fix bug : incorrect main tag on default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,11 +44,11 @@
 				</ul>
 			</nav>
 
-			<main>
+			<div id= "main">
 				<div class="inner">
 					{{ content }}
 				</div>
-			</main>
+			</div>
 	
 			<!-- Footer -->
 			<footer id="footer">
