fix bug: shift styling index 1 upwards

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,9 +12,9 @@ layout: default
 <section class="tiles">
 	{% for post in site.posts %}
 	{% assign loopindex = forloop.index | modulo: 6 %}
-	<article class="style{{ loopindex }}">
+	<article class="style{{ loopindex+1 }}">
 		<span class="image">
-			<img src="images/pic0{{ loopindex }}.jpg" alt="" />
+			<img src="images/pic0{{ loopindex+1 }}.jpg" alt="" />
 		</span>
 		<a href="{{ post.url | prepend: site.baseurl }}">
 			<h2>{{ post.title }}</h2>
