--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,9 @@ layout: default
 ---
 
 <header>
-	<h1>This is Phantom, a free, fully responsive site<br />
-		template designed by <a href="http://html5up.net">HTML5 UP</a>.
+	<h1>OpenMedicsHK
 	</h1>
-	<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+	<p></p>
 </header>
 
 <section class="tiles">
@@ -19,7 +18,7 @@ layout: default
 		<a href="{{ post.url | prepend: site.baseurl }}">
 			<h2>{{ post.title }}</h2>
 			<div class="content">
-				<p>{{ post.content | strip_html | truncatewords: 20 }}</p>
+				<p>{{ post.desc }}</p>
 			</div>
 		</a>
 	</article>
