--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 				<div class="inner">
 			  
 					<!-- Logo -->
-					<a href="{{ site.baseurl }}" class="logo">
+					<a href="{{ "/" | relative_url }}" class="logo">
 						<span class="symbol"><img src="{{ "/images/logo.svg" | relative_url }}" alt="" /></span><span class="title">{{ site.title }}</span>
 					</a>
 
@@ -35,7 +35,6 @@
 			<nav id="menu">
 				<h2>Menu</h2>
 				<ul>
-					<li><a href="{{ "/" | relative_url }}">Home</a></li>
 					<li><a href="{{ "/about/" | relative_url }}">About</a></li>
 					<li><a href="{{ "/generic.html" | relative_url }}">Ipsum veroeros</a></li>
 					<li><a href="{{ "/generic.html" | relative_url }}">Tempus etiam</a></li>
