--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
 	{% assign loopindex = forloop.index | modulo: 6 | plus : 1 %}
 	<article class="style{{ loopindex }}">
 		<span class="image">
-			<img src="images/pic0{{ loopindex }}.jpg" alt="" />
+			<img src="{{ post.img | prepend: "/images/" | prepend: site.baseurl }}" alt="" />
 		</span>
 		<a href="{{ post.url | prepend: site.baseurl }}">
 			<h2>{{ post.title }}</h2>
