--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 					<!-- Nav -->
 					<nav>
 						<ul>
-							<li><a href="#menu">Menu</a></li>
+							<li><a href="#menu">目錄</a></li>
 						</ul>
 					</nav>
 
@@ -35,12 +35,9 @@
 			<nav id="menu">
 				<h2>Menu</h2>
 				<ul>
-					<li><a href="{{ "/" | relative_url }}">Home</a></li>
-					<li><a href="{{ "/about/" | relative_url }}">About</a></li>
-					<li><a href="{{ "/generic.html" | relative_url }}">Ipsum veroeros</a></li>
-					<li><a href="{{ "/generic.html" | relative_url }}">Tempus etiam</a></li>
-					<li><a href="{{ "/generic.html" | relative_url }}">Consequat dolor</a></li>
-					<li><a href="{{ "/generic.html" | relative_url }}">Elements</a></li>
+					<li><a href="{{ "/" | relative_url }}">資料庫</a></li>
+					<li><a href="{{ "/about/" | relative_url }}">關於我們</a></li>
+					<li><a href="{{ "/faq/" | relative_url }}">常見疑問</a></li>
 				</ul>
 			</nav>
 
