--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -52,3 +52,18 @@
 	@import 'layout/main';
 	@import 'layout/footer';
 	@import 'layout/wrapper';
+
+
+	.resp-container {
+	    position: relative;
+	    overflow: hidden;
+	    padding-top: 56.25%;
+	}
+	.resp-iframe {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
+	    border: 0;
+	}
