--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,7 @@
 
 		</div>
 		<!-- Scripts -->
+		{% include service_worker.html %}
 		<script src="{{ "/assets/js/jquery.min.js" | relative_url }}"></script>
 		<script src="{{ "/assets/js/browser.min.js" | relative_url }}"></script>
 		<script src="{{ "/assets/js/breakpoints.min.js" | relative_url }}"></script>
