--- a/_includes/service_worker.html
+++ b/_includes/service_worker.html
@@ -4,7 +4,7 @@ function showOfflineToast() {
 
 // (1)
 if (navigator.serviceWorker) {
-  navigator.serviceWorker.register('/sw.js').then(function(reg){
+  navigator.serviceWorker.register("{{ "/assets/js/sw.js" | relative_url }}").then(function(reg){
     if (!reg.installing) return;
       console.log("[*] ServiceWorker is installing...");
 
