--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 	<noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | relative_url }}" /></noscript>	
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon-16x16.png" | relative_url }}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/apple-touch-icon.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/android32x32.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/android16x16.png" | relative_url }}">
+    <link rel="apple-touch-icon" sizes="192x192" href="{{ "/assets/android192x192.png" | relative_url }}">
 </head>
