--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,12 +13,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	
 
-    <!-- CSS -->
+	<!-- CSS -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
 	<noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | relative_url }}" /></noscript>	
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/android32x32.png" | relative_url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/android16x16.png" | relative_url }}">
-    <link rel="apple-touch-icon" sizes="192x192" href="{{ "/assets/android192x192.png" | relative_url }}">
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/android32x32.png" | relative_url }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/android16x16.png" | relative_url }}">
+	<link rel="apple-touch-icon" sizes="192x192" href="{{ "/assets/android192x192.png" | relative_url }}">
+	
+	<!-- manifest -->	
+	<link rel="manifest" href="/manifest.json">
 </head>
