--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 					<!-- Logo -->
 					<a href="{{ "/" | relative_url }}" class="logo">
 						<span class="symbol"><img src="{{ "/images/logo.svg" | relative_url }}" alt="" /></span><span class="title">{{ site.title }}</span>
+						<span class="offline"><i class="fas fa-exclamation"></i><i class="fas fa-wifi"></i></span>
 					</a>
 
 					<!-- Nav -->
