--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,9 @@
 					<!-- Logo -->
 					<a href="{{ "/" | relative_url }}" class="logo">
 						<span class="symbol"><img src="{{ "/images/logo.svg" | relative_url }}" alt="" /></span><span class="title">{{ site.title }}</span>
-						<span class="offline"><i class="fas fa-exclamation"></i><i class="fas fa-wifi"></i></span>
 					</a>
+					<span class="offline"><i class="icon fa-exclamation" style="color:lightgray"></i>
+						<i class="icon fa-wifi" style="color:lightgray"></i></span>
 
 					<!-- Nav -->
 					<nav>
