--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,12 @@
 					<a href="{{ "/" | relative_url }}" class="logo">
 						<span class="symbol"><img src="{{ "/images/logo.svg" | relative_url }}" alt="" /></span><span class="title">{{ site.title }}</span>
 					</a>
-					<span class="offline"><i class="icon fa-exclamation" style="color:lightgray"></i>
-						<i class="icon fa-wifi" style="color:lightgray"></i></span>
-
+					<a href="{{ "/about-offline-mode/" | relative_url }}" class="logo">
+						<span class="offline">
+							<i class="icon fa-exclamation" style="color:lightgray"></i>
+							<i class="icon fa-wifi" style="color:lightgray"></i>
+						</span>
+					</a>
 					<!-- Nav -->
 					<nav>
 						<ul>
