--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <header>
-	<h1>OpenMedicsHK
-	</h1>
-	<p>公共醫療資訊平台</p>
+	<h2>公共醫療資訊平台
+	</h2>
+	<h3>我想知道...</h3>
 </header>
 
 <section class="tiles">
