--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,9 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
 	<noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | relative_url }}" /></noscript>	
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+   crossorigin=""/>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/android32x32.png" | relative_url }}">
