--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
    crossorigin=""/>
+    	<link rel="stylesheet" href="https://cdn.klokantech.com/mapbox-gl-js/v0.43.0/mapbox-gl.css" />
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/android32x32.png" | relative_url }}">
