--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,3 @@
-@import url(font-awesome.min.css);
-@import url(icon_font.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
 
 /*
@@ -3307,3 +3305,8 @@ input, select, textarea {
 			}
 
 		}
+
+
+/* Putting icons last to avoid being modified by main CSS */
+@import url(font-awesome.min.css);
+@import url(icon_font.css);
