--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
+@import url(font-awesome.min.css);
+@import url(icon_font.css);
+
 
 /*
 	Phantom by HTML5 UP
@@ -11,7 +14,7 @@ iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+u, center, dl, dt, dd, ol, ul, li, fieldset,
 form, label, legend, table, caption, tbody,
 tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
@@ -157,7 +160,7 @@ input, select, textarea {
 		font-weight: 900;
 	}
 
-	em, i {
+	em {
 		font-style: italic;
 	}
 
@@ -3305,8 +3308,3 @@ input, select, textarea {
 			}
 
 		}
-
-
-/* Putting icons last to avoid being modified by main CSS */
-@import url(font-awesome.min.css);
-@import url(icon_font.css);
