--- a/_layouts/HAHosp.html
+++ b/_layouts/HAHosp.html
@@ -3,8 +3,8 @@ layout: default
 title: 香港公立醫院
 desc: 醫院管理局屬下醫院資料
 ---
-<h1>{% include HA-icon.html name=post.institution_eng %}  {{ post.institution_tc }}</h1>
-<h2>{{ post.institution_eng }}</h2>
-<p>{{ post.cluster_tc }}</p>
-<p>{{ post.address_tc }}</p>
-<script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ post.Slug }}" data-width="500" ></script>
+<h1>{% include HA-icon.html name=page.institution_eng %}  {{ page.institution_tc }}</h1>
+<h2>{{ page.institution_eng }}</h2>
+<p>{{ page.cluster_tc }}</p>
+<p>{{ page.address_tc }}</p>
+<script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ page.Slug }}" data-width="500" ></script>
