--- a/_layouts/HAHosp.html
+++ b/_layouts/HAHosp.html
@@ -1,11 +1,18 @@
----
+  ---
 layout: default
 title: 香港公立醫院
 desc: 醫院管理局屬下醫院資料
 ---
 <h1>{% include HA-icon.html name=page.institution_eng %}  {{ page.institution_tc }}</h1>
 <h2>{{ page.institution_eng }}</h2>
-<p>{{ page.address_tc }}</p>
-<p>{{ page.short_description_tc }}</p>
-<p>{{ page.long_description_tc }}</p>
-<script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ page.Slug }}" data-width="500" ></script>
+
+<div class="row">
+  <div class="col-6 col-12-medium">
+    <p>{{ page.address_tc }}</p>
+    <p>{{ page.short_description_tc }}</p>
+    <p>{{ page.long_description_tc }}</p>
+  </div>
+  <div class="col-6 col-12-medium">
+    <script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ page.Slug }}" data-width="300" ></script>
+  </div>
+</div>
