--- a/_layouts/HAHosp.html
+++ b/_layouts/HAHosp.html
@@ -1,4 +1,4 @@
-  ---
+---
 layout: default
 title: 香港公立醫院
 desc: 醫院管理局屬下醫院資料
@@ -13,6 +13,6 @@ desc: 醫院管理局屬下醫院資料
     <p>{{ page.long_description_tc }}</p>
   </div>
   <div class="col-6 col-12-medium">
-    <script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ page.Slug }}" data-width="300" ></script>
+    <script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ page.Slug }}" ></script>
   </div>
 </div>
