--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 			  
 					<!-- Logo -->
 					<a href="{{ "/" | relative_url }}" class="logo">
-						<span class="symbol"><img src="{{ "/images/logo.svg" | relative_url }}" alt="" /></span><span class="title"><b>OUR</b> {{site.title}} </span>
+						<span class="symbol"><img src="{{ "/images/logo.svg" | relative_url }}" alt="" /></span><span class="title">{{site.title}} </span>
 					</a>
 					<a href="{{ "/about-offline-mode/" | relative_url }}" class="logo">
 						<span class="offline"><i class="icon fa-exclamation" style="color:lightgray"></i><i class="icon fa-wifi" style="color:lightgray"></i></span>
