--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,9 +22,9 @@
     	<link rel="stylesheet" href="https://cdn.klokantech.com/mapbox-gl-js/v0.43.0/mapbox-gl.css" />
 
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/android32x32.png" | relative_url }}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/android16x16.png" | relative_url }}">
-	<link rel="apple-touch-icon" sizes="192x192" href="{{ "/assets/android192x192.png" | relative_url }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon-16x16.png" | relative_url }}">
+	<link rel="apple-touch-icon" sizes="192x192" href="{{ "/assets/xxxhdpi-icon.png" | relative_url }}">
 	
 	<!-- manifest -->	
 	<link rel="manifest" href="/manifest.json">
