Update HA hospital page to match new data format

--- a/_layouts/HAHosp.html
+++ b/_layouts/HAHosp.html
@@ -13,6 +13,6 @@ desc: 醫院管理局屬下醫院資料
     <p>{{ page.long_description_tc }}</p>
   </div>
   <div class="col-4 col-12-medium">
-    <script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ page.Slug }}" ></script>
+    <script type="text/javascript" src="https://static.citymapper.com/js/embed/widget.js" data-slug="{{ page.city_mapper_slug }}" ></script>
   </div>
 </div>
